@@ -8,6 +8,6 @@ public class DogFactResponseDto {
     private List<DogFactData> data;
 
     public String getFirstFact() {
-        return (data != null && !data.isEmpty()) ? data.get(0).getAttributes().getBody() : "No fact available";
+        return (data != null && !data.isEmpty()) ? data.getFirst().getAttributes().getBody() : "No fact available";
     }
 }
